# ScrapeWizard

./: .gitignore  README.md  learn.md  pyproject.toml  requirements.txt  storage_state.json
.github/workflows/: release.yml
scrapewizard/cli/: main.py
scrapewizard/core/: config.py  constants.py  logging.py  orchestrator.py  project_manager.py  state.py
scrapewizard/generated_templates/: scraper_template.py
scrapewizard/healing/: classifier.py  repair_loop.py
scrapewizard/interactive/: ui.py
scrapewizard/llm/: client.py  codegen.py  prompts.py  repair.py  understanding.py
scrapewizard/recon/: browser.py  dom_analyzer.py  pagination.py  scanner.py  tech_fingerprint.py
scrapewizard/report/: html_generator.py
scrapewizard/runtime/: tester.py  validator.py
scrapewizard/schemas/: analysis_snapshot.json  error.json  interaction.json  llm_understanding.json  report.json  run_config.json  session.json
scrapewizard/utils/: file_io.py  security.py  ux.py
scrapewizard_runtime/: __init__.py  base.py  io.py  navigation.py  runtime.py  state.py
studio/backend/: browser_manager.py  main.py  requirements.txt  state.py  test_runner.py
studio/bridge/: engine.js  recorder.py
studio/desktop/: main.js  package.json  preload.js
studio/frontend/: index.html  package-lock.json  package.json  vite.config.js
studio/prototypes/: auto_repair.html  studio_ide.html
studio/recordings/: books-test.jsonl
studio/shared/: aet_schema.json  config.py  validators.py
tests/: test_cli.py
tests/core/: test_config.py
tests/golden_sites/: amazon.py  books.py  react_shop.py
(+11 files in other folders)
